Fix incorrect link to imputed question from task-finish tmplt
Only Admins can see this link, but link path was wrong
causing no route error to be thrown when clicked.

--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -73,7 +73,7 @@
                           {{q.spec.title}}
                         </a>
                       {% elif authoring_tool_enabled %}
-                        <a href="{{task.get_absolute_url}}/questions/{{q.key}}">
+                        <a href="{{task.get_absolute_url}}/question/{{q.key}}">
                           {{q.spec.title}}
                         </a>
                       {% else %}
