--- a/templates/project.html
+++ b/templates/project.html
@@ -149,10 +149,11 @@ h3.question-group-title {
       <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/controls/selected';">
         <em class="glyphicon glyphicon-book"></em> Controls</a>
       </button>
-    {% endif %}
-    {% if project.system is not None %}
       <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/components/selected';">
         <em class="glyphicon glyphicon-tags"></em>&nbsp; Components</a>
+      </button>
+      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/poams';">
+        <em class="glyphicon glyphicon-check"></em>&nbsp; POA&Ms</a>
       </button>
     {% endif %}
     {% if not project.is_account_project or project.is_deletable %}
