Enable display of HTML content in support page
Add `|safe` filter to support page template to not
escape the HTML content in the database content for the page.

Small migration to Support model for helptext on `text` field.

--- a/templates/support.html
+++ b/templates/support.html
@@ -20,7 +20,7 @@ Support
     <h2 class="">Support</h2>
 
     <div id="support_content" class="row" style="margin: auto; padding-top: 24px; margin: auto;">
-        {% if support.text %}<p>{{ support.text }}</p>{% endif %}
+        {% if support.text %}<p>{{ support.text|safe }}</p>{% endif %}
         {% if support.email %}<p><a href="mailto:{{ support.email }}">{{ support.email }}</a></p>{% endif %}
         {% if support.url %}<p><a href="{{ support.url }}">{{ support.url }}</a></p>{% endif %}
         {% if support.phone %}<p>{{ support.phone }}</p>{% endif %}
