Improve accessibility & AnonymousUser handling
Make several fixes in the non-questionnaire pages fixing
accessibility errors. Create better ProjectForm modal
for selecting a new project's target portfolio.

Improve contrast levels by changing light gray text
from #888 to #666.

Make sure "Start New" glboal menu is properly working
for new control pages (e.g., properly pass in ProjectForm).

Stop displaying Notification dropdown in global menu
when user is anonymous.

**UI changes**

Fixed multiple accessibility issues:

- Improve contrast in `/projects`, `/portfolios`, and various control pages (replaced `#888` with `#666`)
- Fix redundant links in `/projects`.
- Add label to `select-portfolio-modal` portfolio form element (and remove extra inclusion of modal from `projects.html` template).
- Add value to hidden `h4` global_modal_title to help with accessibility.
- Properly generate "Start project" content to `/controls`, `catalog`, and other control pages.
- Added accessible `title` parameter to `control-lookup` search box on control pages.
- Properly hide notifications when user is anonymous.
- Do not display start dropdown in navbar when user is anonymous.

**Bug fixes**

- Fix missing form labels in start project portfolio selection modal effecting accessibility.
- Do notget portfolio object in ProjectForm for AnonymousUser.

--- a/templates/portfolios/portfolios_table.html
+++ b/templates/portfolios/portfolios_table.html
@@ -5,11 +5,11 @@
 {% if portfolios %}
 <div class="container">
 <div class="row">
-  <div class="col-xs-10 col-md-5">Portfolio</div>
-  <div class="col-xs-6 col-sm-1">ID</div>
-  <div class="col-xs-6 col-sm-2">Role</div>
+  <div class="col-xs-10 col-md-5"><strong>Portfolio</strong></div>
+  <div class="col-xs-6 col-sm-1"><strong>ID</strong></div>
+  <div class="col-xs-6 col-sm-2"><strong>Role</strong></div>
   <div class="col-md-2">&nbsp;</div>
-  <div class="col-xs-12 col-md-2">Created</div>
+  <div class="col-xs-12 col-md-2"><strong>Created</strong></div>
 </div>
 {% endif %}
 
@@ -23,20 +23,20 @@
       </div>
     </div>
 
-    <div class="col-md-1"><small style="color: #888;">{{portfolio.id}}</small></div>
+    <div class="col-md-1">{{portfolio.id}}</div>
 
     {% get_obj_perms request.user for portfolio as "perms" %}
     {% if "can_grant_portfolio_owner_permission" in perms %}
-    <div class="col-md-2"><small style="color: #888;">Owner</small></div>
+    <div class="col-md-2">Owner</div>
     {% elif "change_portfolio" in perms%}
-    <div class="col-md-2"><small style="color: #888;">Portfolio Member</small></div>
+    <div class="col-md-2">Portfolio Member</div>
     {% else %}
-    <div class="col-md-2"><small style="color: #888;">Project Member</small></div>
+    <div class="col-md-2">Project Member</div>
     {% endif %}
     <div class="col-md-2">&nbsp;</div>
 
-    <div class="col-xs-12 col-md-2" style="text-align: left;"><small style="color: #888;">
-        {{portfolio.created|naturaltime}}</small></div>
+    <div class="col-xs-12 col-md-2" style="text-align: left;">
+        {{portfolio.created|naturaltime}}</div>
   </div>
   {% endfor %}
 
