--- a/templates/bootstrap-helpers.html
+++ b/templates/bootstrap-helpers.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="global_modal_title"> </h4>
+        <h4 class="modal-title" id="global_modal_title">Modal</h4>
       </div>
       <div class="modal-body">
         <p> </p>
