--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
 
     <div id="navbar-collapse-target" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-left" style="color: white;">
-        {% if request.user.is_authenticated %}
+        {% if request.user.is_authenticated and not request.user.is_anonymous %}
           <li><a href="/projects" id="menu-projects">Projects</a></li>
           <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
           <li><a href="/portfolios" id="menu-portfolios">Portfolios</a></li>
@@ -30,11 +30,11 @@
         {% if request.user.is_authenticated %}
         <!-- Create new projects, portfolios -->
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="create-menu-dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="create-menu-dropdown">
               <span class="glyphicon glyphicon-plus"></span>
             </a>
             <ul class="dropdown-menu" style="width: 300px;">
-              <li><a href="#" id="" onclick="show_select_portfolio_modal(); return false;">Start a new project&hellip;</a></li>
+              <li><a id="" onclick="show_select_portfolio_modal(); return false;">Start a new project&hellip;</a></li>
               <li class="dropdown-item-text small text-muted" style="margin: 0px 12px 8px 20px;">Begin a project from the assessment library. You will be able to choose any available assessment.
               </li>
               <li><a href="/portfolios/new" id="">Create a portfolio&hellip;</a></li>
@@ -45,18 +45,18 @@
         {% endif %}
 
         {% if user.is_staff %}
-          <li><a href="{% url "guidedmodules_analytics" %}"><span class="glyphicon glyphicon-dashboard" aria-label="Analytics" tooltip="Analytics"></span></a></li>
+          <li><a href="{% url "guidedmodules_analytics" %}" aria-label="Analytics" tooltip="Analytics"><span class="glyphicon glyphicon-dashboard" aria-label="Analytics" tooltip="Analytics"></span></a></li>
         {% endif %}
         {# if user.can_see_any_org_settings or user.is_staff #}
         {% if user.is_staff %}
-        <li><a href="/settings" id="menu-settings"><span class="glyphicon glyphicon-cog" aria-label="Settings" tooltip="Settings"></span></a></li>
+        <li><a href="/settings" id="menu-settings" aria-label="Settings" tooltip="Settings><span class="glyphicon glyphicon-cog" aria-label="Settings" tooltip="Settings"></span></a></li>
         {% endif %}
 
-        {% include "navbar-notifications.html" %}
+        {% if not user.is_anonymous %}{% include "navbar-notifications.html" %}{% endif %}
 
         {% if request.user.is_authenticated %}
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="user-menu-dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="user-menu-dropdown">
               {% with url=request.user.get_profile_picture_absolute_url %}
                 {% if url %}
                   <img src="{{url}}" height="30" alt="Profile Picture"
