--- a/templates/projects.html
+++ b/templates/projects.html
@@ -121,49 +121,45 @@ Your Compliance Projects
 
 <div class="container">
 <div class="row">
-  <div class="col-sm-1">&nbsp;</div>
-  <div class="col-xs-10 col-md-4">Project</div>
-  <div class="col-xs-6 col-sm-1">ID</div>
-  <div class="col-xs-6 col-sm-2">Portfolio</div>
-  <div class="col-xs-6 col-sm-2">Role</div>
-  <div class="col-xs-12 col-md-2">Updated</div>
+  <div class="col-xs-10 col-md-5"><strong>Project</strong></div>
+  <div class="col-xs-6 col-sm-1"><strong>ID</strong></div>
+  <div class="col-xs-6 col-sm-2"><strong>Portfolio</strong></div>
+  <div class="col-xs-6 col-sm-2"><strong>Role</strong></div>
+  <div class="col-xs-12 col-md-2"><strong>Updated</strong></div>
 </div>
 {% endif %}
 
 {% for project in projects %}
 <div class="row" style="border-top: 1px solid #aaa;padding: 8px 0px 8px 0px;">
-  <div class="col-sm-1">
+  <div class="col-xs-10 col-md-5">
     {% if project.root_task.get_app_icon_url %}
-      <a href="{{project.get_absolute_url}}" class="project-image">
+      <span class="project-image">
         <img src="{{project.root_task.get_app_icon_url}}" class="img-responsive" alt="App Icon">
-      </a>
+      </span>
+      &nbsp;&nbsp;&nbsp;
     {% else %}
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     {% endif %}
-  </div>
-  <div class="col-xs-10 col-md-4">
     <a href="{{project.get_absolute_url}}" style="color: black;">{{project.title}}</a>
   </div>
 
-  <div class="col-xs-6 col-sm-1"><small style="color: #888;">{{project.id}}</small></div>
-  <div class="col-xs-6 col-sm-2"><small style="color: #888;">{{project.portfolio.title}}</small></div>
+  <div class="col-xs-6 col-sm-1">{{project.id}}</div>
+  <div class="col-xs-6 col-sm-2">{{project.portfolio.title}}</div>
 
   {% get_obj_perms request.user for project as "perms" %}
   {% get_obj_perms request.user for project.portfolio as "portfolio_perms" %}
   {% if "delete_project" in perms %}
-  <div class="col-xs-6 col-sm-2"><small style="color: #888;">Owner</small></div>
+  <div class="col-xs-6 col-sm-2">Owner</div>
   {% elif "change_project" in perms%}
-  <div class="col-xs-6 col-sm-2"><small style="color: #888;">Project Member</small></div>
+  <div class="col-xs-6 col-sm-2">Project Member</div>
   {% elif "portfolio_perms"%}
-  <div class="col-xs-6 col-sm-2"><small style="color: #888;">Portfolio Member</small></div>
+  <div class="col-xs-6 col-sm-2">Portfolio Member</div>
   {% endif %}
 
   <div class="col-xs-12 col-md-2" style="text-align: left;">
-      <small style="color: #888;">
       <!-- App version: {{project.root_task.module.spec.catalog.version|force_escape}} -->
       {{project.root_task.updated|naturaltime}}
       <!-- Started: {{project.created|naturaltime}} -->
-    </small>
   </div>
 </div>
 
@@ -226,7 +222,5 @@ Your Compliance Projects
     </div>
 </div>
 {% endif %}
-
-{% include "portfolios/select-portfolio-modal.html" %}
 
 {% endblock %}
