[WIP] Adding component reuse capability
This commit begins the work of enabling easy reuse of control-implementation
statements among multiple systems.

Supporting reuse of control-implementation statements (allocated by component)
is an essential part of Compliance as Code and accelerating and automating
the ATO/compliance process.

To reuse control-implementation statements authored in GovReady,
we need a way to capture a control-implementation statement when written and
make that statement available and easily found to be "copied" to other systems.

This commit adds a "prototype" attribute to statements to associate a given
statement with a "prototype" of that statement. We can now create statement_types
that have a suffix "_prototype" to identify a statement as an abstract, original
upstream statement prototype that can have individual instances assigned to system
element mappings.

We add two methods to the Statement model. We add `create_prototype` method to
make a deep copy of an existing statement and create a prototype of that statement.
We add `create_instance_from_prototype` method to do a deep copy of a prototype
statement and make the statement an instance. We link the instance of a statement
to the prototype statement using the `prototype` attribute.

Prototype control implementation statements have the type "control_implementation_prototype" and
are associated with a producer_element element. This makes it easy to identify all
the prototype statements for an abstract producer_element. We can also easily find all
the instances of a prototype statement across all systems by finding statements that
have a prototype relationship to our given prototype statement. This should also
make it very easy to diff instances of a statement against the prototype statement and
update accordingly.

As part of this commit, we add small form to the selected component's page of a system.
Here, the user can assign a new component to system via a drop down and the
`add_syst

--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -5,11 +5,12 @@
 {% load q %}
 
 {% block title %}
-{{ portfolio.title }} Controls Selected
+{{ portfolio.title }} Components Selected
 {% endblock %}
 
 {% block head %}
 {% include "controls/_style-controls.html" %}
+
 {% endblock %}
 
 {% block contextbar %}{% endblock %}
@@ -53,6 +54,24 @@
     </div>
     {% endfor %}
 
+    <div id="tab-content" class="row row-control" style="">
+      <form class="form-inline" method="post" action="/systems/{{ system.id }}/components/add_system_component">
+        {% csrf_token %}
+        <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
+        <div class="form-group">
+            <label for="compoment">Add component</label>&nbsp;&nbsp;
+              <select class="producer_element_id" id="producer_element_id" name="producer_element_id" style="width:340px;">
+                {% for component in elements %}
+                <option value="{{ component.id }}">{{ component.name }}</option>
+                {% endfor %}
+              </select>
+        </div>
+          &nbsp;&nbsp;<button type="submit" class="small btn btn-sm btn-success" style="color: white;" onclick="add_smt()">Add</button>
+      </div>
+    </div>
+      </form>
+  </div>
+
   </div>
 </div>
 
@@ -60,11 +79,19 @@
 {% endblock %}
 
 {% block scripts %}
-<script>
+<script src="{% static "js/select2.min.js" %}"></script>
+<link href="{% static "css/select2.min.css" %}" rel="stylesheet" />
+
+<script type="text/javascript">
   function show_control_by_id() {
     var control_id = $('#control_lookup').find('input[name="id"]').val();
     var url = "/controls/"+"800-53"+"/"+control_id+"/";
     window.location.href = url;
   }
+
+  $(document).ready(function() {
+    $('.producer_element_id').select2();
+  });
 </script>
+
 {% endblock %}
