--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -237,7 +237,7 @@ Remove contextbar from top of page
                   <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="false" aria-controls="document-{{ forloop.counter }}-body">
                     <span id="producer_element-panel_num-title">{{ smt.producer_element.name }}</span>&nbsp;
                     <div class="panel-heading-smt">Status: {% if smt.status != "" and smt.status is not None %}{{ smt.status }}{% else %}TBD{% endif %}</div>
-                    {% if smt.pid is not None %}<div class="panel-heading-smt">{{ smt.pid }}.</div>{% endif %}
+                    {% if smt.pid is not None and smt.pid != "" %}<div class="panel-heading-smt">{{ smt.pid }}.</div>{% endif %}
                     <div class="panel-heading-smt">{{ smt.body }}</div>
                   </a>
                 </h4>
@@ -287,6 +287,13 @@ Remove contextbar from top of page
                   <input type="hidden" id="sid" name="sid" value="{{ control.id }}">
                   <input type="hidden" id="sid_class" name="sid_class" value="{{ smt.sid_class }}">
                   <input type="hidden" id="statement_type" name="statement_type" value="control_implementation">
+
+                  {% if user.is_superuser %}
+                  <div class="form-group">
+                    <label for="status">Update statement's prime version?</label>
+                    <input type="checkbox" id="update_prototype" name="update_prototype">
+                  </div>
+                  {% endif %}
 
                 <div class="modal-footer">
                   <div id="success-msg-smt_{{ forloop.counter }}" style="display: inline; margin-right: 20px; color: gray;"></div>
