uncomment download button on POA&Ms list

--- a/templates/systems/poams_list.html
+++ b/templates/systems/poams_list.html
@@ -37,10 +37,11 @@
         <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">&nbsp;</div>
         <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
           <a href="/systems/{{ system.id }}/poams/new" class="small btn btn-xs btn-success" style="color: white;">New POA&M</a>
-          <!--a href="selected/export/xacta/xlsx">export</a-->
-          <!-- <span class="glyphicon glyphicon-download-alt pull-right"
-                style="cursor: pointer;"
-                onclick="download_document('{{document.id|escapejs}}', {{ system.id }})"></span> -->
+          <a href="poams/export/xlsx">
+	    <span class="glyphicon glyphicon-download-alt pull-right"
+		  style="cursor: pointer;"
+		  onclick="download_document('{{document.id|escapejs}}', {{ system.id }})"></span>
+	  </a>
         </div>
     </div>
     {% if poam_smts|length < 1 %}
