--- a/templates/systems/poams_list.html
+++ b/templates/systems/poams_list.html
@@ -37,7 +37,7 @@
         <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">&nbsp;</div>
         <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
           <a href="/systems/{{ system.id }}/poams/new" class="small btn btn-xs btn-success" style="color: white;">New POA&M</a>
-          <a href="poams/export/xlsx">
+          <a>
 	    <span class="glyphicon glyphicon-download-alt pull-right"
 		  style="cursor: pointer;"
 		  onclick="download_document('{{document.id|escapejs}}', {{ system.id }})"></span>
@@ -77,7 +77,26 @@
 
 {% block scripts %}
 <script>
-
+  // The download button shows a modal to ask what file format to download in.
+  function download_document(document_id, system_id) {
+    var dom = $("<div><p>Select download format:</p>"
+      + "<select class=form-control>"
+      + "<option value='xlsx'>Microsoft Excel Spreadsheet</option>"
+      + "<option value='csv'>CSV Text File</option>"
+      + "</select>"
+      + "</div>");
+    show_modal_confirm("Download Document", dom, "Download", function() {
+      var format = dom.find("select").val();
+      switch(format) {
+        case "xlsx":
+          window.location = "/systems/" + system_id + "/poams/export/xlsx";
+          break;
+        case "csv":
+          window.location = "/systems/" + system_id + "/poams/export/csv";
+          break;
+      }
+    });
+  }
 </script>
 
 {% endblock %}
