--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -77,7 +77,9 @@
                     <tr>
                         <td>{{document.title}}</td>
                         <td>
-                          {% if document.format == "oscal_xml" %}
+                          {% if document.format == "oscal_json" %}
+                            <a href="{{task.get_absolute_url}}/download/document/{{document.id | urlencode }}/oscal_json">OSCAL (json)</a>&nbsp;&nbsp;
+                          {% elif document.format == "oscal_xml" %}
                             <a href="{{task.get_absolute_url}}/download/document/{{document.id | urlencode }}/oscal_xml">OSCAL (xml)</a>&nbsp;&nbsp;
                           {% else %}
                             <a href="{{task.get_absolute_url}}/download/document/{{document.id | urlencode }}/docx">Word (docx)</a>&nbsp;&nbsp;
