change RemoteServiceAccount to RemoteService. add remote service list

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -68,6 +68,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a href="{{user.user_settings_task_create_if_doesnt_exist.get_absolute_url}}" id="user-menu-account-settings">Account Settings</a></li>
+              <li><a href="/remote-services">Remote Services</a></li>
               <li><a href="/api-keys">Your API Keys</a></li>
               {% if can_upgrade_app %}
               <li role="separator" class="divider"></li>
