--- a/templates/remote-services/form.html
+++ b/templates/remote-services/form.html
@@ -10,8 +10,8 @@ Welcome to Compliance Automation
 <div class="container">
     <div class="row">
         <div class="col-md-3" style="margin: 40px 0px 30px 0px;">
-            <h2>Remote Service Account</h2>
-            <p>Create a remote service account to connect GovReady to a remote service.</p>
+            <h2>Remote Service</h2>
+            <p>Connect GovReady to a remote service.</p>
         </div>
 
         <div class="col-md-9" style="margin: 40px 0px 30px 0px;">
