--- a/templates/remote-services/remote-services-table.html
+++ b/templates/remote-services/remote-services-table.html
@@ -20,8 +20,7 @@
       </div>
     </div>
 
-    <div class="col-md-1">{{remote_service.name}}</div>
-    <div class="col-md-2">{{remote_service.access_key}}</div>
+    <div class="col-md-2">{{remote_service.access_token}}</div>
   </div>
   {% endfor %}
 
