improve table heading wording

--- a/templates/remote-services/remote-services-table.html
+++ b/templates/remote-services/remote-services-table.html
@@ -6,7 +6,7 @@
 <div class="container">
 <div class="row">
   <div class="col-xs-10 col-md-5"><strong>Remote Service</strong></div>
-  <div class="col-xs-10 col-md-5"><strong>Access Key</strong></div>
+  <div class="col-xs-10 col-md-5"><strong>Access Token or Identifier</strong></div>
 </div>
 {% endif %}
 
