--- a/templates/systems/issue_tracker.html
+++ b/templates/systems/issue_tracker.html
@@ -32,10 +32,15 @@
   </div><!--/row-->
     <p>&nbsp;</p>
 
+    <div id="tab-content" class="row rows-header" style="">
+        <div id="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="margin-top: 4px;">Issues</div>
+    </div>
     {% for id, title in it_issues.items %}
       <div id="tab-content" class="row row-control" style="">
-          <div id="" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-              {{ id }}:
+          <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+              {{ id }}
+          </div>
+          <div id="" class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
               {{ title }}
           </div>
       </div>
